--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,190 +1,74 @@
 <!DOCTYPE HTML>
 <!--
-	Minimaxing by HTML5 UP
+	Verti by HTML5 UP
 	html5up.net | @ajlkn
 	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
 -->
 <html>
 
 <head>
-  <title>    <%= siteTitle %> -- <%= pageTitle %></title>
-  <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <!--[if lte IE 8]><script src="javascripts/ie/html5shiv.js"></script><![endif]-->
-  <link rel="stylesheet" href="stylesheets/main.css" />
-  <!--[if lte IE 9]><link rel="stylesheet" href="stylesheets/ie9.css" /><![endif]-->
+  <% include partials/head.ejs %>
 </head>
 
-<body>
+<body class="homepage">
   <div id="page-wrapper">
-    <div id="header-wrapper">
-      <div class="container">
-        <div class="row">
-          <div class="12u">
 
-            <header id="header">
-              <h1><a href="#" id="logo">Minimaxing</a></h1>
-              <nav id="nav">
-                <a href="index.html">Homepage</a>
-                <a href="twocolumn1.html" class="current-page-item">Two Column #1</a>
-                <a href="twocolumn2.html">Two Column #2</a>
-                <a href="onecolumn.html">One Column</a>
-                <a href="threecolumn.html">Three Column</a>
-              </nav>
-            </header>
+    <!-- Header -->
+    <% include partials/menu.ejs %>
 
-          </div>
-        </div>
-      </div>
-    </div>
-    <div id="main">
-      <div class="container">
-        <div class="row main-row">
-          <div class="8u 12u(mobile)">
+      <!-- Banner -->
+      <% include partials/banner.ejs %>
 
-            <section class="left-content">
-              <h2>Two Column #1 (right-hand sidebar)</h2>
-              <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean ante ante, viverra a ornare sed, convallis sed est. Proin felis sapien, adipiscing quis eleifend vel, sodales vitae sapien. Donec vel lacus leo, eu convallis metus. Cras egestas
-                feugiat tortor, vitae interdum augue aliquam a. Sed nec augue id orci egestas commodo in eget magna. Nunc eleifend diam non odio laoreet placerat gravida nulla bibendum. Phasellus tempus imperdiet suscipit.</p>
-              <p>Mauris risus nulla, pulvinar vitae sagittis a, pharetra nec tellus. Suspendisse varius enim ac felis mattis aliquam. Aenean et justo quis ipsum gravida lacinia. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec lacinia bibendum
-                cursus. Nullam nec pellentesque lacus. In porta erat in tortor rhoncus quis accumsan magna pretium. Nulla posuere magna eget mauris lacinia in mollis sem fermentum. Donec mollis adipiscing mauris, ut posuere enim rhoncus ut. Nunc commodo
-                vestibulum orci vel placerat. Cras sed risus libero. Donec ac lacus vitae lectus mattis commodo id vitae libero. Etiam lorem odio, volutpat nec pulvinar sit amet, tincidunt ut lacus. Pellentesque consequat arcu vel nisi lobortis in pellentesque
-                orci sollicitudin. Cras gravida lacus turpis, consectetur porttitor lectus. Cras malesuada tortor id neque porta ut semper quam iaculis.</p>
-              <p>Nulla ut tortor quam, a luctus nunc. Nulla condimentum diam porttitor arcu placerat tincidunt. Nunc non augue ipsum. Nulla facilisi. Phasellus feugiat augue in ipsum egestas semper. Suspendisse blandit, nisl ullamcorper blandit sollicitudin,
-                sem leo auctor lectus, et volutpat mauris elit et odio. Ut elementum risus in metus mollis tristique vulputate nulla interdum. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis vitae orci dui, ut facilisis dui.</p>
-            </section>
+        <!-- Features section... sometimes this is good. -->
+        <% include partials/features.ejs %>
 
-          </div>
-          <div class="4u 12u(mobile)">
+        <!-- Main -->
+        <div id="main-wrapper">
+          <div class="container">
+            <div class="row 200%">
+              <div class="4u 12u(medium)">
 
-            <section>
-              <h2>Who are you guys?</h2>
-              <ul class="small-image-list">
-                <li>
-                  <a href="#"><img src="images/pic2.jpg" alt="" class="left" /></a>
-                  <h4>Jane Anderson</h4>
-                  <p>Varius nibh. Suspendisse vitae magna eget et amet mollis justo facilisis amet quis.</p>
-                </li>
-                <li>
-                  <a href="#"><img src="images/pic1.jpg" alt="" class="left" /></a>
-                  <h4>James Doe</h4>
-                  <p>Vitae magna eget odio amet mollis justo facilisis amet quis. Sed sagittis consequat.</p>
-                </li>
-              </ul>
-            </section>
-
-            <section>
-              <h2>How about some links?</h2>
-              <div>
-                <div class="row">
-                  <div class="6u 12u(mobile)">
-                    <ul class="link-list">
-                      <li><a href="#">Sed neque nisi consequat</a></li>
-                      <li><a href="#">Dapibus sed mattis blandit</a></li>
-                      <li><a href="#">Quis accumsan lorem</a></li>
-                      <li><a href="#">Suspendisse varius ipsum</a></li>
-                      <li><a href="#">Eget et amet consequat</a></li>
-                    </ul>
-                  </div>
-                  <div class="6u 12u(mobile)">
-                    <ul class="link-list">
-                      <li><a href="#">Quis accumsan lorem</a></li>
-                      <li><a href="#">Sed neque nisi consequat</a></li>
-                      <li><a href="#">Eget et amet consequat</a></li>
-                      <li><a href="#">Dapibus sed mattis blandit</a></li>
-                      <li><a href="#">Vitae magna sed dolore</a></li>
-                    </ul>
-                  </div>
+                <!-- Sidebar -->
+                <div id="sidebar">
+                  <section class="widget thumbnails">
+                    <h3>Interesting stuff</h3>
+                    <div class="grid">
+                      <div class="row 50%">
+                        <div class="6u"><a href="#" class="image fit"><img src="images/pic04.jpg" alt="" /></a></div>
+                        <div class="6u"><a href="#" class="image fit"><img src="images/pic05.jpg" alt="" /></a></div>
+                        <div class="6u"><a href="#" class="image fit"><img src="images/pic06.jpg" alt="" /></a></div>
+                        <div class="6u"><a href="#" class="image fit"><img src="images/pic07.jpg" alt="" /></a></div>
+                      </div>
+                    </div>
+                    <a href="#" class="button icon fa-file-text-o">More</a>
+                  </section>
                 </div>
+
               </div>
-            </section>
+              <div class="8u 12u(medium) important(medium)">
 
-          </div>
-        </div>
-      </div>
-    </div>
-    <div id="footer-wrapper">
-      <div class="container">
-        <div class="row">
-          <div class="8u 12u(mobile)">
-
-            <section>
-              <h2>How about a truckload of links?</h2>
-              <div>
-                <div class="row">
-                  <div class="3u 12u(mobile)">
-                    <ul class="link-list">
-                      <li><a href="#">Sed neque nisi consequat</a></li>
-                      <li><a href="#">Dapibus sed mattis blandit</a></li>
-                      <li><a href="#">Quis accumsan lorem</a></li>
-                      <li><a href="#">Suspendisse varius ipsum</a></li>
-                      <li><a href="#">Eget et amet consequat</a></li>
-                    </ul>
-                  </div>
-                  <div class="3u 12u(mobile)">
-                    <ul class="link-list">
-                      <li><a href="#">Quis accumsan lorem</a></li>
-                      <li><a href="#">Sed neque nisi consequat</a></li>
-                      <li><a href="#">Eget et amet consequat</a></li>
-                      <li><a href="#">Dapibus sed mattis blandit</a></li>
-                      <li><a href="#">Vitae magna sed dolore</a></li>
-                    </ul>
-                  </div>
-                  <div class="3u 12u(mobile)">
-                    <ul class="link-list">
-                      <li><a href="#">Sed neque nisi consequat</a></li>
-                      <li><a href="#">Dapibus sed mattis blandit</a></li>
-                      <li><a href="#">Quis accumsan lorem</a></li>
-                      <li><a href="#">Suspendisse varius ipsum</a></li>
-                      <li><a href="#">Eget et amet consequat</a></li>
-                    </ul>
-                  </div>
-                  <div class="3u 12u(mobile)">
-                    <ul class="link-list">
-                      <li><a href="#">Quis accumsan lorem</a></li>
-                      <li><a href="#">Sed neque nisi consequat</a></li>
-                      <li><a href="#">Eget et amet consequat</a></li>
-                      <li><a href="#">Dapibus sed mattis blandit</a></li>
-                      <li><a href="#">Vitae magna sed dolore</a></li>
-                    </ul>
-                  </div>
+                <!-- Content -->
+                <div id="content">
+                  <section class="last">
+                    <h2>So what's this all about?</h2>
+                    <p>This is <strong>Verti</strong>, a free and fully responsive HTML5 site template by <a href="http://html5up.net">HTML5 UP</a>. Verti is released under the <a href="http://html5up.net/license">Creative Commons Attribution license</a>,
+                      so feel free to use it for any personal or commercial project you might have going on (just don't forget to credit us for the design!)</p>
+                    <p>Phasellus quam turpis, feugiat sit amet ornare in, hendrerit in lectus. Praesent semper bibendum ipsum, et tristique augue fringilla eu. Vivamus id risus vel dolor auctor euismod quis eget mi. Etiam eu ante risus. Aliquam erat volutpat.
+                      Aliquam luctus mattis lectus sit amet phasellus quam turpis.</p>
+                    <a href="#" class="button icon fa-arrow-circle-right">Continue Reading</a>
+                  </section>
                 </div>
+
               </div>
-            </section>
-
-          </div>
-          <div class="4u 12u(mobile)">
-
-            <section>
-              <h2>Something of interest</h2>
-              <p>Duis neque nisi, dapibus sed mattis quis, rutrum accumsan sed. Suspendisse eu varius nibh. Suspendisse vitae magna eget odio amet mollis justo facilisis quis. Sed sagittis mauris amet tellus gravida lorem ipsum dolor sit amet consequat blandit.</p>
-              <footer class="controls">
-                <a href="#" class="button">Oh, please continue ....</a>
-              </footer>
-            </section>
-
-          </div>
-        </div>
-        <div class="row">
-          <div class="12u">
-
-            <div id="copyright">
-              &copy; Untitled. All rights reserved. | Design: <a href="http://html5up.net">HTML5 UP</a>
             </div>
-
           </div>
         </div>
-      </div>
-    </div>
-  </div>
 
-  <!-- Scripts -->
-  <script src="javascripts/jquery.min.js"></script>
-  <script src="javascripts/skel.min.js"></script>
-  <script src="javascripts/skel-viewport.min.js"></script>
-  <script src="javascripts/util.js"></script>
-  <!--[if lte IE 8]><script src="javascripts/ie/respond.min.js"></script><![endif]-->
-  <script src="javascripts/main.js"></script>
+        <!-- Footer -->
+        <% include partials/footer.ejs %>
+
+          <!-- Scripts -->
+          <% include partials/scripts.ejs %>
 
 </body>
 
