--- a/public/stylesheets/ie8.css
+++ b/public/stylesheets/ie8.css
@@ -1,65 +1,57 @@
 /*
-	Verti by HTML5 UP
+	Escape Velocity by HTML5 UP
 	html5up.net | @ajlkn
 	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
 */
 
 /* Basic */
 
-	body {
-		background-color: #f0f0f0;
-	}
-
-/* Image */
-
-	.image img {
+	form input[type="text"],
+	form input[type="email"],
+	form input[type="password"],
+	form select,
+	form textarea {
 		position: relative;
 		-ms-behavior: url("assets/js/ie/PIE.htc");
 	}
-
-/* Button */
 
 	input[type="button"],
 	input[type="submit"],
-	input[type="reset"],
+	input[type="reset"] {
+		position: relative;
+		-ms-behavior: url("assets/js/ie/PIE.htc");
+	}
+
 	.button,
-	button {
-		position: relative;
-		-ms-behavior: url("assets/js/ie/PIE.htc");
-	}
-
-/* Widgets */
-
-	.box,
-	.widget.contact ul li a {
-		position: relative;
-		-ms-behavior: url("assets/js/ie/PIE.htc");
-	}
-
-/* Header */
-
-	#logo h1 {
-		position: relative;
-		-ms-behavior: url("assets/js/ie/PIE.htc");
-	}
-
-/* Nav */
-
-	#nav ul li a, #nav ul li span {
-		position: relative;
-		-ms-behavior: url("assets/js/ie/PIE.htc");
-	}
-
+	#intro > .style2,
+	#copyright ul,
+	#nav > ul,
 	.dropotron {
-		border: solid 1px #eee;
-		box-shadow: none !important;
+		position: relative;
 		-ms-behavior: url("assets/js/ie/PIE.htc");
 	}
 
-		.dropotron.level-0 {
-			box-shadow: none !important;
-		}
+/* Section/Article */
 
-			.dropotron.level-0:before {
-				display: none;
-			}
+	section > .last-child,
+	article > .last-child,
+	section.last-child,
+	article.last-child {
+		margin-bottom: 0;
+	}
+
+/* Wrappers */
+
+	.wrapper .title:before, .wrapper .title:after {
+		display: none;
+	}
+
+	#header-wrapper {
+		-ms-behavior: url("assets/js/ie/backgroundsize.min.htc");
+	}
+
+/* Copyright */
+
+	#copyright {
+		margin: 0;
+	}
