--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,74 +1,185 @@
 <!DOCTYPE HTML>
-<!--
-	Verti by HTML5 UP
-	html5up.net | @ajlkn
-	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
--->
 <html>
 
 <head>
   <% include partials/head.ejs %>
 </head>
 
-<body class="homepage">
+<body class="left-sidebar">
   <div id="page-wrapper">
 
-    <!-- Header -->
-    <% include partials/menu.ejs %>
+    <!-- Banner -->
+    <% include partials/top.ejs %>
 
-      <!-- Banner -->
-      <% include partials/banner.ejs %>
+          <!-- Main -->
+          <div class="wrapper style2">
+            <div class="title">
+              <%= pageTitle %>
+            </div>
+            <div id="main" class="container">
+              <div class="row 150%">
+                <div class="4u 12u(mobile)">
 
-        <!-- Features section... sometimes this is good. -->
-        <% include partials/features.ejs %>
+                  <!-- Sidebar -->
+                  <div id="sidebar">
+                    <section class="box">
+                      <header>
+                        <h2>Ipsum nullam luctus</h2>
+                      </header>
+                      <p>Malesuada quis eget eros. Nullam sodales cursus sapien, id consequat leo suscipit ut. Praesent id turpis vitae turpis pretium ultricies. Vestibulum sit amet risus elit.</p>
+                      <a href="#" class="button style1">Learn More</a>
+                    </section>
+                    <section class="box">
+                      <header>
+                        <h2>Vitae turpis consequat</h2>
+                      </header>
+                      <ul class="style2">
+                        <li>
+                          <article class="box post-excerpt">
+                            <a href="#" class="image left"><img src="images/pic08.jpg" alt="" /></a>
+                            <h3><a href="#">Diam odio lorem</a></h3>
+                            <p>Duis odio diam, luctus et vulputate vitae, vehicula ac dolor. Pellentesque at urna eget tellus sed etiam.</p>
+                          </article>
+                        </li>
+                        <li>
+                          <article class="box post-excerpt">
+                            <a href="#" class="image left"><img src="images/pic09.jpg" alt="" /></a>
+                            <h3><a href="#">Sed duis consequat</a></h3>
+                            <p>Duis odio diam, luctus et vulputate vitae, vehicula ac dolor. Pellentesque at urna eget tellus sed etiam.</p>
+                          </article>
+                        </li>
+                        <li>
+                          <article class="box post-excerpt">
+                            <a href="#" class="image left"><img src="images/pic10.jpg" alt="" /></a>
+                            <h3><a href="#">Tellus nulla volutpat</a></h3>
+                            <p>Duis odio diam, luctus et vulputate vitae, vehicula ac dolor. Pellentesque at urna eget tellus sed etiam.</p>
+                          </article>
+                        </li>
+                      </ul>
+                      <a href="#" class="button style1">Archives</a>
+                    </section>
+                    <section class="box">
+                      <header>
+                        <h2>Magna diam vehicula</h2>
+                      </header>
+                      <ul class="style3">
+                        <li><a href="#">Nulla iaculis egestas varius</a></li>
+                        <li><a href="#">Augue massa feugiat quam pretium</a></li>
+                        <li><a href="#">Orci sem vel libero cras nisi odio</a></li>
+                        <li><a href="#">Sed hendrerit massa nam mattis</a></li>
+                        <li><a href="#">Turpis vel leo accumsan aliquet</a></li>
+                        <li><a href="#">Dapibus mi fermentum fusce non</a></li>
+                        <li><a href="#">Arcu laoreet sapien tempus</a></li>
+                        <li><a href="#">Nulla iaculis egestas varius</a></li>
+                        <li><a href="#">Augue massa feugiat quam pretium</a></li>
+                        <li><a href="#">Orci sem vel libero cras nisi odio</a></li>
+                        <li><a href="#">Sed hendrerit massa nam mattis</a></li>
+                      </ul>
+                    </section>
+                  </div>
 
-        <!-- Main -->
-        <div id="main-wrapper">
-          <div class="container">
-            <div class="row 200%">
-              <div class="4u 12u(medium)">
+                </div>
+                <div class="8u 12u(mobile) important(mobile)">
 
-                <!-- Sidebar -->
-                <div id="sidebar">
-                  <section class="widget thumbnails">
-                    <h3>Interesting stuff</h3>
-                    <div class="grid">
-                      <div class="row 50%">
-                        <div class="6u"><a href="#" class="image fit"><img src="images/pic04.jpg" alt="" /></a></div>
-                        <div class="6u"><a href="#" class="image fit"><img src="images/pic05.jpg" alt="" /></a></div>
-                        <div class="6u"><a href="#" class="image fit"><img src="images/pic06.jpg" alt="" /></a></div>
-                        <div class="6u"><a href="#" class="image fit"><img src="images/pic07.jpg" alt="" /></a></div>
+                  <!-- Content -->
+                  <div id="content">
+                    <article class="box post">
+                      <header class="style1">
+                        <h2>Lorem ipsum dolor sit amet magna egestas morbi bibendum sed malesuada</h2>
+                        <p>Tempus feugiat veroeros sed nullam dolore</p>
+                      </header>
+                      <a href="#" class="image featured">
+												<img src="images/pic01.jpg" alt="" />
+											</a>
+                      <p>Fringilla nisl. Donec accumsan interdum nisi, quis tincidunt felis sagittis eget. odio eleifend. Duis commodo fringilla commodo. Aliquam erat volutpat. Vestibulum facilisis leo magna. Cras sit amet urna eros, id egestas urna. Quisque
+                        aliquam tempus euismod. Vestibulum ante ipsum primis in faucibus.</p>
+                      <p>Phasellus nisl nisl, varius id porttitor sed, pellentesque ac orci. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Morbi bibendum justo sed mauris vehicula malesuada aliquam elit imperdiet.
+                        Aliquam eu nibh lorem, eget gravida mi. Duis odio diam, luctus et vulputate vitae, vehicula ac dolor. Pellentesque at urna eget tellus lobortis ultrices sed non erat. Donec eget erat non magna volutpat malesuada quis eget eros.
+                        Nullam sodales cursus sapien, id consequat leo suscipit ut. Praesent id turpis vitae turpis pretium ultricies. Vestibulum sit amet risus elit.</p>
+                      <p>Donec consectetur vestibulum dolor et pulvinar. Etiam vel felis enim, at viverra ligula. Ut porttitor sagittis lorem, quis eleifend nisi ornare vel. Praesent nec orci eget quam rutrum bibendum. Proin pellentesque diam non ligula
+                        commodo tempor. Vivamus eget urna nibh. Curabitur non fringilla nisl. Donec accumsan interdum nisi, quis tincidunt felis sagittis eget. Donec elementum ligula dignissim sem pulvinar non semper odio eleifend. Duis commodo fringilla
+                        commodo. Aliquam erat volutpat. Vestibulum facilisis leo magna. Cras sit amet urna eros, id egestas urna. Quisque aliquam tempus euismod. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia.</p>
+                      <p>Phasellus nisl nisl, varius id porttitor sed, pellentesque ac orci. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Morbi bibendum justo sed mauris vehicula malesuada aliquam elit imperdiet.
+                        Aliquam eu nibh lorem, eget gravida mi. Duis odio diam, luctus et vulputate vitae, vehicula ac dolor. Pellentesque at urna eget tellus lobortis ultrices sed non erat. Donec eget erat non magna volutpat malesuada quis eget eros.
+                        Nullam sodales cursus sapien, id consequat leo suscipit ut. Praesent id turpis vitae turpis pretium ultricies. Vestibulum sit amet risus elit.</p>
+                    </article>
+                    <div class="row 150%">
+                      <div class="6u 12u(mobile)">
+                        <section class="box">
+                          <header>
+                            <h2>Magna pulvinar tempus</h2>
+                          </header>
+                          <a href="#" class="image featured"><img src="images/pic05.jpg" alt="" /></a>
+                          <p>Rutrum bibendum. Proin pellentesque diam non ligula commodo tempor. Vivamus eget urna nibh. Curabitur non fringilla nisl. Donec accumsan interdum nisi, quis tempus.
+                          </p>
+                          <a href="#" class="button style1">More</a>
+                        </section>
+                      </div>
+                      <div class="6u 12u(mobile)">
+                        <section class="box">
+                          <header>
+                            <h2>Magna pulvinar tempus</h2>
+                          </header>
+                          <a href="#" class="image featured"><img src="images/pic06.jpg" alt="" /></a>
+                          <p>Rutrum bibendum. Proin pellentesque diam non ligula commodo tempor. Vivamus eget urna nibh. Curabitur non fringilla nisl. Donec accumsan interdum nisi, quis tempus.
+                          </p>
+                          <a href="#" class="button style1">More</a>
+                        </section>
                       </div>
                     </div>
-                    <a href="#" class="button icon fa-file-text-o">More</a>
-                  </section>
+                  </div>
+
                 </div>
-
-              </div>
-              <div class="8u 12u(medium) important(medium)">
-
-                <!-- Content -->
-                <div id="content">
-                  <section class="last">
-                    <h2>So what's this all about?</h2>
-                    <p>This is <strong>Verti</strong>, a free and fully responsive HTML5 site template by <a href="http://html5up.net">HTML5 UP</a>. Verti is released under the <a href="http://html5up.net/license">Creative Commons Attribution license</a>,
-                      so feel free to use it for any personal or commercial project you might have going on (just don't forget to credit us for the design!)</p>
-                    <p>Phasellus quam turpis, feugiat sit amet ornare in, hendrerit in lectus. Praesent semper bibendum ipsum, et tristique augue fringilla eu. Vivamus id risus vel dolor auctor euismod quis eget mi. Etiam eu ante risus. Aliquam erat volutpat.
-                      Aliquam luctus mattis lectus sit amet phasellus quam turpis.</p>
-                    <a href="#" class="button icon fa-arrow-circle-right">Continue Reading</a>
-                  </section>
-                </div>
-
               </div>
             </div>
           </div>
-        </div>
 
-        <!-- Footer -->
-        <% include partials/footer.ejs %>
+          <!-- Highlights -->
+          <div class="wrapper style3">
+            <div class="title">The Endorsements</div>
+            <div id="highlights" class="container">
+              <div class="row 150%">
+                <div class="4u 12u(mobile)">
+                  <section class="highlight">
+                    <a href="#" class="image featured"><img src="images/pic02.jpg" alt="" /></a>
+                    <h3><a href="#">Aliquam diam consequat</a></h3>
+                    <p>Eget mattis at, laoreet vel amet sed velit aliquam diam ante, dolor aliquet sit amet vulputate mattis amet laoreet lorem.</p>
+                    <ul class="actions">
+                      <li><a href="#" class="button style1">Learn More</a></li>
+                    </ul>
+                  </section>
+                </div>
+                <div class="4u 12u(mobile)">
+                  <section class="highlight">
+                    <a href="#" class="image featured"><img src="images/pic03.jpg" alt="" /></a>
+                    <h3><a href="#">Nisl adipiscing sed lorem</a></h3>
+                    <p>Eget mattis at, laoreet vel amet sed velit aliquam diam ante, dolor aliquet sit amet vulputate mattis amet laoreet lorem.</p>
+                    <ul class="actions">
+                      <li><a href="#" class="button style1">Learn More</a></li>
+                    </ul>
+                  </section>
+                </div>
+                <div class="4u 12u(mobile)">
+                  <section class="highlight">
+                    <a href="#" class="image featured"><img src="images/pic04.jpg" alt="" /></a>
+                    <h3><a href="#">Mattis tempus lorem</a></h3>
+                    <p>Eget mattis at, laoreet vel amet sed velit aliquam diam ante, dolor aliquet sit amet vulputate mattis amet laoreet lorem.</p>
+                    <ul class="actions">
+                      <li><a href="#" class="button style1">Learn More</a></li>
+                    </ul>
+                  </section>
+                </div>
+              </div>
+            </div>
+          </div>
 
-          <!-- Scripts -->
-          <% include partials/scripts.ejs %>
+          <!-- Footer -->
+          <% include partials/footer.ejs %>
+
+      </div>
+
+      <!-- Scripts -->
+      <% include partials/scripts.ejs %>
 
 </body>
 
