--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -1,80 +1,90 @@
-<div id="footer-wrapper">
-  <footer id="footer" class="container">
-    <div class="row">
-      <div class="3u 6u(medium) 12u$(small)">
+<div id="footer-wrapper" class="wrapper">
+  <div class="title">The Rest Of It</div>
+  <div id="footer" class="container">
+    <header class="style1">
+      <h2>Ipsum sapien elementum portitor?</h2>
+      <p>
+        Sed turpis tortor, tincidunt sed ornare in metus porttitor mollis nunc in aliquet.<br /> Nam pharetra laoreet imperdiet volutpat etiam consequat feugiat.
+      </p>
+    </header>
+    <hr />
+    <div class="row 150%">
+      <div class="6u 12u(mobile)">
 
-        <!-- Links -->
-          <section class="widget links">
-            <h3>Random Stuff</h3>
-            <ul class="style2">
-              <li><a href="#">Etiam feugiat condimentum</a></li>
-              <li><a href="#">Aliquam imperdiet suscipit odio</a></li>
-              <li><a href="#">Sed porttitor cras in erat nec</a></li>
-              <li><a href="#">Felis varius pellentesque potenti</a></li>
-              <li><a href="#">Nullam scelerisque blandit leo</a></li>
-            </ul>
-          </section>
-
-      </div>
-      <div class="3u 6u$(medium) 12u$(small)">
-
-        <!-- Links -->
-          <section class="widget links">
-            <h3>Random Stuff</h3>
-            <ul class="style2">
-              <li><a href="#">Etiam feugiat condimentum</a></li>
-              <li><a href="#">Aliquam imperdiet suscipit odio</a></li>
-              <li><a href="#">Sed porttitor cras in erat nec</a></li>
-              <li><a href="#">Felis varius pellentesque potenti</a></li>
-              <li><a href="#">Nullam scelerisque blandit leo</a></li>
-            </ul>
-          </section>
-
-      </div>
-      <div class="3u 6u(medium) 12u$(small)">
-
-        <!-- Links -->
-          <section class="widget links">
-            <h3>Random Stuff</h3>
-            <ul class="style2">
-              <li><a href="#">Etiam feugiat condimentum</a></li>
-              <li><a href="#">Aliquam imperdiet suscipit odio</a></li>
-              <li><a href="#">Sed porttitor cras in erat nec</a></li>
-              <li><a href="#">Felis varius pellentesque potenti</a></li>
-              <li><a href="#">Nullam scelerisque blandit leo</a></li>
-            </ul>
-          </section>
+        <!-- Contact Form -->
+        <section>
+          <form method="post" action="#">
+            <div class="row 50%">
+              <div class="6u 12u(mobile)">
+                <input type="text" name="name" id="contact-name" placeholder="Name" />
+              </div>
+              <div class="6u 12u(mobile)">
+                <input type="text" name="email" id="contact-email" placeholder="Email" />
+              </div>
+            </div>
+            <div class="row 50%">
+              <div class="12u">
+                <textarea name="message" id="contact-message" placeholder="Message" rows="4"></textarea>
+              </div>
+            </div>
+            <div class="row">
+              <div class="12u">
+                <ul class="actions">
+                  <li><input type="submit" class="style1" value="Send" /></li>
+                  <li><input type="reset" class="style2" value="Reset" /></li>
+                </ul>
+              </div>
+            </div>
+          </form>
+        </section>
 
       </div>
-      <div class="3u 6u$(medium) 12u$(small)">
+      <div class="6u 12u(mobile)">
 
         <!-- Contact -->
-          <section class="widget contact last">
-            <h3>Contact Us</h3>
-            <ul>
-              <li><a href="#" class="icon fa-twitter"><span class="label">Twitter</span></a></li>
-              <li><a href="#" class="icon fa-facebook"><span class="label">Facebook</span></a></li>
-              <li><a href="#" class="icon fa-instagram"><span class="label">Instagram</span></a></li>
-              <li><a href="#" class="icon fa-dribbble"><span class="label">Dribbble</span></a></li>
-              <li><a href="#" class="icon fa-pinterest"><span class="label">Pinterest</span></a></li>
-            </ul>
-            <p>1234 Fictional Road<br />
-            Nashville, TN 00000<br />
-            (800) 555-0000</p>
-          </section>
+        <section class="feature-list small">
+          <div class="row">
+            <div class="6u 12u(mobile)">
+              <section>
+                <h3 class="icon fa-home">Mailing Address</h3>
+                <p>
+                  Untitled Corporation<br /> 1234 Somewhere Rd #987<br /> Nashville, TN 00000-0000
+                </p>
+              </section>
+            </div>
+            <div class="6u 12u(mobile)">
+              <section>
+                <h3 class="icon fa-comment">Social</h3>
+                <p>
+                  <a href="#">@untitled-corp</a><br />
+                  <a href="#">linkedin.com/untitled</a><br />
+                  <a href="#">facebook.com/untitled</a>
+                </p>
+              </section>
+            </div>
+          </div>
+          <div class="row">
+            <div class="6u 12u(mobile)">
+              <section>
+                <h3 class="icon fa-envelope">Email</h3>
+                <p>
+                  <a href="#">info@untitled.tld</a>
+                </p>
+              </section>
+            </div>
+            <div class="6u 12u(mobile)">
+              <section>
+                <h3 class="icon fa-phone">Phone</h3>
+                <p>
+                  (000) 555-0000
+                </p>
+              </section>
+            </div>
+          </div>
+        </section>
 
       </div>
     </div>
-    <div class="row">
-      <div class="12u">
-        <div id="copyright">
-          <ul class="menu">
-            <li>&copy; Untitled. All rights reserved</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
-          </ul>
-        </div>
-      </div>
-    </div>
-  </footer>
-</div>
-
+    <hr />
+  </div>
 </div>
