--- a/views/people-orig.ejs
+++ b/views/people-orig.ejs
@@ -31,7 +31,7 @@
 										<img src="images/pic01.jpg" alt="" />
 									</a>
               <div id="midchart" style="height:300px;"></div>
-              <% include partials/tempchart.ejs %>
+              <% include partials/peoplechart.ejs %>
           </div>
           <p>Fringilla nisl. Donec accumsan interdum nisi, quis tincidunt felis sagittis eget. odio eleifend. Duis commodo fringilla commodo. Aliquam erat volutpat. Vestibulum facilisis leo magna. Cras sit amet urna eros, id egestas urna. Quisque aliquam
             tempus euismod. Vestibulum ante ipsum primis in faucibus.</p>
