--- a/views/partials/top.ejs
+++ b/views/partials/top.ejs
@@ -31,26 +31,12 @@
               </ul>
             </li>
             <li>
-              <a href="#">Workshops ></a>
-              <ul>
-                <li><a href="#">Magna phasellus</a></li>
-                <li><a href="#">Etiam nisl</a></li>
-                <li><a href="#">Sed feugiat</a></li>
-              </ul>
+              <a href="https://www.zotero.org/groups/271377/">Research library</a>
             </li>
           </ul>
         </li>
-        <li><a href="/jobs">Jobs Listings</a>
-          <ul>
-            <li>
-              <a href="#">Recent Listings</a>
-              <a href="#">Post a Job</a>
-              <a href="#">Mentoring and Advice</a>
-            </li>
-          </ul>
+        <li><a href="http://community.sociotech.net/c/announcements/jobs">Jobs Listings</a>
         </li>
-        <li><a href="/library">Recommended Readings</a></li>
-
       </ul>
 
     </nav>
