--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -88,3 +88,15 @@
     <hr />
   </div>
 </div>
+
+<%# <script>
+  @TODO In Production this needs to be un-commented:
+  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+  })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+
+  ga('create', 'UA-33902508-1', 'auto');
+  ga('send', 'pageview');
+
+</script>%>
