--- a/views/partials/head.ejs
+++ b/views/partials/head.ejs
@@ -17,6 +17,7 @@
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/c3/0.4.14/c3.min.css" />
 <script src="https://cdnjs.cloudflare.com/ajax/libs/c3/0.4.14/c3.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.18.1/moment.min.js"></script>
 <script src="https://d3js.org/d3.v3.min.js"></script>
 <!-- @NOTE Chart libs need to be here not in scripts -->
 <!-- @TODO Replace CDN versions of C/D3 eventually with locals. #XXX C3 reqs D3 v3 (not D3 v4) -->
